--- a/Lesson_002/package.json
+++ b/Lesson_002/package.json
@@ -5,10 +5,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "backend": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "json-server": "^0.17.1",
+    "vue": "^3.2.45",
+    "vue-router": "^4.0.13"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
