--- a/Lesson_002/package.json
+++ b/Lesson_002/package.json
@@ -9,7 +9,9 @@
     "backend": "json-server --watch db.json --port 5000"
   },
   "dependencies": {
+    "express": "^4.18.2",
     "json-server": "^0.17.1",
+    "mongoose": "^7.0.2",
     "vue": "^3.2.45",
     "vue-router": "^4.0.13"
   },
