--- a/tasks/login_api/package.json
+++ b/tasks/login_api/package.json
@@ -1,25 +1,26 @@
 {
-  "name": "mini-prject-001",
+  "name": "login_api",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "backend": "json-server --watch db.json --port 3000"
+    "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs --fix --ignore-path .gitignore",
+    "format": "prettier --write src/"
   },
   "dependencies": {
-    "aos": "^2.3.4",
-    "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
-    "dotenv-webpack": "^8.0.1",
-    "json-server": "^0.17.2",
-    "jsonwebtoken": "^9.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
+    "@rushstack/eslint-patch": "^1.2.0",
     "@vitejs/plugin-vue": "^4.0.0",
+    "@vue/eslint-config-prettier": "^7.1.0",
+    "eslint": "^8.34.0",
+    "eslint-plugin-vue": "^9.9.0",
+    "prettier": "^2.8.4",
     "vite": "^4.1.4"
   }
 }
