--- a/mini-prject-001/package.json
+++ b/mini-prject-001/package.json
@@ -5,16 +5,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview",
-    "backend": "json-server --watch db.json --port 3000"
+    "preview": "vite preview"
   },
   "dependencies": {
-    "aos": "^2.3.4",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
-    "dotenv-webpack": "^8.0.1",
-    "json-server": "^0.17.2",
-    "jsonwebtoken": "^9.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
   },
